@@ -7,6 +7,8 @@ import net.sf.cglib.proxy.Enhancer;
 import net.sf.cglib.proxy.MethodInterceptor;
 import org.junit.jupiter.api.Test;
 
+import java.lang.management.GarbageCollectorMXBean;
+import java.lang.management.ManagementFactory;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -16,13 +18,7 @@ import java.util.List;
  */
 public class GcTest {
     private Logger logger = new Logger();
-
-    @Test
-    public void allocationTest() {
-        byte[] allocation1, allocation2;
-        allocation1 = new byte[30900 * 1024];
-        allocation2 = new byte[30900 * 1024];
-    }
+    private static final int _1MB = 1024 * 1024;
 
     @Test
     public void heapOOMTest() {
@@ -76,13 +72,33 @@ public class GcTest {
     }
 
     @Test
-    public void methodAreaOOM() {
+    public void methodAreaOOMTest() {
         while (true) {
             Enhancer enhancer = new Enhancer();
             enhancer.setSuperclass(OOMObject.class);
             enhancer.setUseCache(false);
             enhancer.setCallback((MethodInterceptor) (o, method, objects, methodProxy) -> methodProxy.invokeSuper(o, objects));
             enhancer.create();
+        }
+    }
+
+    /**
+     * -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+     */
+    @Test
+    public void allocationTest() {
+        byte[] allocation1, allocation2, allocation3, allocation4;
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        allocation4 = new byte[4 * _1MB];
+    }
+
+    @Test
+    public void gcTest() {
+        List<GarbageCollectorMXBean> l = ManagementFactory.getGarbageCollectorMXBeans();
+        for (GarbageCollectorMXBean b : l) {
+            System.out.println(b.getName());
         }
     }
 }
